[package]
name = "codepecker"
version = "0.1.0"
edition = "2021"
description = "CodePecker in the CI"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
mime_guess = "2"
reqwest = { version = "0.11", features = ["blocking", "json","multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
